chore: update CHANGELOG and TODO with three completed column rewrites
- CHANGELOG: add 2026-09-06 entry for 系统性能工程实战 (14 articles, 179k chars) and Linux 性能优化 (15 articles, 191k chars) rewrites; add 2026-09-05 entry for Hermes-Agent expansion (12 articles, 163k chars)
- TODO: mark Hermes-Agent expansion done (12 batches, 501-543 lines/article); add ClickHouse rewrite task (7 batches, 5/7 completed); mark Linux 性能优化 and 系统性能工程实战 rewrites done with completion stats